# MDGFW

./: .gitignore  CMakeLists.txt  README.md  doxyfile
MDGFW/: Animation.cpp  Animator.cpp  Animator.h  Canvas.cpp  Canvas.h  Engine.cpp  Engine.h  Entity.cpp  Entity.h  InputManager.cpp  InputManager.h  Line.cpp  Line.h  MDGFWConfig.h  MDGTime.cpp  Mathmatics.h  Mesh.cpp  Mesh.h  ResourceManager.cpp  ResourceManager.h  SHTime.cpp  SHTime.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h  Text.cpp  Text.h  Texture.cpp  Texture.h  UIElement.cpp  UIElement.h  VectorX.h  World.cpp  World.h  camera.cpp  (+5 more)
MDGFW/shaders/: mesh.frag  mesh.vert  text2.frag  text2.vert
Workspace/: Player.cpp  Player.h  RGBAObj.h  StickFigure.cpp  StickFigure.h  main.cpp
